# gltf-viewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  boxes.gltf  forest.gltf  forest2.blend  forest2.blend1  glfwcamera.h  glprogram.h  gltfscene.h  glview.cc  impl.cc  shader.frag  tiny_gltf.h
assets/: forest.gltf  forest1.blend  shader.frag
